# soom-core

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  configure.ac  libsoomconsensus.pc.in
.tx/: config
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4
ci/: Dockerfile.builder  Dockerfile.gitian-builder  build_src.sh  matrix.sh  test_integrationtests.sh  test_unittests.sh
contrib/: README.md  build_static.sh  gitian-build.py  gitian-build.sh  qt_translations.py  soom-cli.bash-completion  soom-qt.pro  soom-tx.bash-completion  soomd.bash-completion  tidy_datadir.sh
contrib/auto_gdb/: README.md  dash_dbg.sh  debug.gdb  simple_class_obj.py
contrib/debian/: README.md  control  copyright  rules  soom-qt.desktop  soom-qt.install  soom-qt.lintian-overrides  soom-qt.manpages  soom-qt.protocol  soom-tx.bash-completion  soom-tx.install  soom-tx.manpages  soomd.bash-completion  soomd.examples  soomd.install  soomd.lintian-overrides  soomd.manpages  watch
depends/: README.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-cross.md  build-generic.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gateway_conf.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  travis-ci.txt  unit-tests.md  zmq.md
docker/: Dockerfile  README.md  build-docker.sh  push-docker.sh
qa/: README.md
share/: setup.nsi.in
soom-docs/: protocol-documentation.md
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activegateway.cpp  activegateway.h  amount.cpp  amount.h  base58.h  bip39.h  bip39_english.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  gateway-payments.cpp  gateway-payments.h  gateway-sync.cpp  gateway-sync.h  gateway.cpp  gateway.h  gatewayconfig.cpp  gatewayconfig.h  gatewayman.cpp  gatewayman.h  gwnotificationinterface.cpp  gwnotificationinterface.h  hash.h  hdchain.h  httprpc.cpp  httpserver.cpp  init.cpp  (+42 more)
src/bench/: .gitignore
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h  params.h
src/crypto/: common.h
src/evo/: cbtx.cpp  cbtx.h  deterministicgws.cpp  deterministicgws.h  evodb.cpp  evodb.h  providertx.cpp  providertx.h  simplifiedgws.cpp  simplifiedgws.h  specialtx.cpp  specialtx.h
src/llgq/: quorums_blockprocessor.cpp  quorums_blockprocessor.h  quorums_commitment.cpp  quorums_commitment.h  quorums_dummydkg.cpp  quorums_dummydkg.h  quorums_init.cpp  quorums_init.h  quorums_utils.cpp  quorums_utils.h
src/policy/: fees.cpp  policy.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  gatewaylist.cpp  gatewaylist.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  qrcodedialog.cpp  qrcodedialog.h  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  (+29 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  editaddressdialog.ui  gatewaylist.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  transactiondescdialog.ui
src/qt/locale/: soom_bg.ts  soom_de.ts  soom_en.ts  soom_es.ts  soom_fi.ts  soom_fr.ts  soom_it.ts  soom_ja.ts  soom_ko_KR.ts  soom_nl.ts  soom_pl.ts  soom_pt.ts  soom_ru.ts  soom_sk.ts  soom_sv.ts  soom_vi.ts  soom_zh_CN.ts  soom_zh_TW.ts
src/qt/res/: soom-qt-res.rc
src/qt/res/css/: crownium.css  default.css  drkblue.css  light-hires.css  light.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  gateway.cpp  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  register.h  rpcevo.cpp  server.cpp  server.h
src/script/: interpreter.cpp  soomconsensus.cpp  soomconsensus.h
src/support/: lockedpool.cpp  pagelocker.cpp
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  evo_deterministicgws_tests.cpp  evo_simplifiedgws_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  (+29 more)
src/test/data/: README.md  base58_keys_valid.json  bitcoin-util-test.json  proposals-invalid.json  proposals-valid.json
src/wallet/: crypter.cpp  crypter.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqconfig.h  zmqnotificationinterface.cpp  zmqpublishnotifier.cpp
(+90 files in other folders)
